- Critical -- Fixed the issue with the font size not matching when an outline is specifed (previously it was much smaller)
-- This means your previous projects that used outline+text may need to be revisited for font size if you used outline
- Fixed Bottom aligned FormattedText elements (they were being cut off in most cases)

0.99.1.10
- Fix for Text elements using the line spacing value (only supposed to apply to FormattedText)
- Fix for image export at the project level resulting in (bad) different output than individually exporting a layout
- Added error handling to PDF export (should avoid crashing on export if the PDF is open)
- Added a bit more logic around Google token expiration (OAUTH2 has limited options for desktop applications)

0.99.1.9
- Fix for end of row PDF export issue resulting in overlapping layouts on the page.
- Added rotation export functionality to the PDF export (uses the export settings for now)
- Added Print Layouts on New Page option (applies to printing and PDF Export)
- Added ability to import layout objects from other project files

0.99.1.8
- Resolved issue with different decimal types (comma/period) stored in the main ini file
- Added ability for Layouts to load all associated references (NOTE: all references must have the same column order)
(...and yes this technically would allow mixing csv files and Google references)
- Fixed issue where the first line of the define files are read as an actual define and value (instead of column headers)
- Added green highlight for the default reference in a layout (hopefully all cases covered...)

0.99.1.7
- Added ability to export images with a transparent background
- Added ability to stitch images on export
- Made adjustments to logical statements to better support FormattedText
- Added support for < > character replacement via html standard &gt; and &lt; 
(critical if the '<' character is surrounded by white space in an if statement)

0.99.1.6